--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <app-login></app-login>
 <app-register></app-register>
-<router-outlet></router-outlet>
 <app-confirm></app-confirm>
+<app-reset-password></app-reset-password>
+<router-outlet></router-outlet>
 
 <!-- <app-signalr-test></app-signalr-test> -->
