--- a/src/app/pages/reset-password/reset-password.css
+++ b/src/app/pages/reset-password/reset-password.css
@@ -61,6 +61,32 @@
   text-align: center;
 }
 
+.dialog-content form input {
+  width: 100%;
+  padding: 10px;
+  font-size: 1.2rem;
+  color: black;
+}
+.dialog-content form .email input {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border: 1px solid black;
+}
+.dialog-content form .pass {
+  position: relative;
+}
+.dialog-content form .pass a {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 10px;
+  color: black;
+  text-decoration: underline;
+}
+.dialog-content form .pass input {
+  border-radius: 10px;
+  border: 1px solid black;
+}
 .otp-single-input {
   text-align: center;
   font-size: 2rem;
