--- a/src/app/pages/reset-password/reset-password.html
+++ b/src/app/pages/reset-password/reset-password.html
@@ -10,7 +10,7 @@
     </div>
     <div class="dialog-content">
       <form (ngSubmit)="onResetPassword()" #resetPasswordForm="ngForm">
-        <h1>{{ "resetPassword.enterYourEmail" | translate }}</h1>
+        <h1>{{ "resetPassword.welcome" | translate }}</h1>
         <div class="pass">
           <input
             [type]="togglePass ? 'text' : 'password'"
@@ -39,7 +39,12 @@
         </div>
 
         <button type="submit" [disabled]="resetPasswordForm.invalid">
-          {{ "resetPassword.reset" | translate }}
+          {{ "resetPassword.confirm" | translate }}
+        </button>
+        <span class="timer">{{ timer }} s</span>
+
+        <button type="button" (click)="resendOtp()" [disabled]="resendDisabled">
+          {{ "confirmOtp.resendOtp" | translate }}
         </button>
       </form>
     </div>
