--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -24,6 +24,7 @@
       <div class="col-md-4">
 
         <app-reverse-section   
+        [propertyId]="propertyId"
                 [checkIn]="selectedDates.start"
                 [checkOut]="selectedDates.end"
                 [guests]="guestCount"
