--- a/src/app/pages/PropertyDetails/BookingCalendar/BookingCalendar.component.html
+++ b/src/app/pages/PropertyDetails/BookingCalendar/BookingCalendar.component.html
@@ -1,6 +1,6 @@
-<div class="airbnb-calendar-container mt-5">
-    <div class=" mt">
-          <h2>2 nights in L'Hospitalet de Llobregat</h2>
+<div class="airbnb-calendar-container mt-1">
+    <div class=" mb-4">
+          <h2 class="titlecalender mb-4">2 nights in L'Hospitalet de Llobregat</h2>
           <!-- <p>{{ checkIn | checkin: 'MMM d, y' }} - {{ checkOut | date: 'MMM d, y' }}</p> -->
     </div>
     <ngx-daterangepicker-material
