--- a/src/app/layout/listing-wizard-layout/listing-wizard-layout.html
+++ b/src/app/layout/listing-wizard-layout/listing-wizard-layout.html
@@ -44,7 +44,7 @@
     </div>
 
     <button
-      (click)="isLastStep ? onSubmit.emit() : navigateToNextStep()"
+      (click)="isLastStep ? handleSubmit() : navigateToNextStep()"
       [disabled]="!canProceed"
       class="nav-button btn-primary"
       [ngClass]="{ 'btn-get-started': isFirstStep }"
