--- a/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.html
+++ b/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.html
@@ -31,7 +31,7 @@
               [(ngModel)]="address"
               name="address"
             />
-            <button type="button" class="get-location-btn">
+            <button type="button" class="get-location-btn" (click)="getCurrentLocation()">
               <svg
                 viewBox="0 0 24 24"
                 width="24"
