--- a/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.css
+++ b/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.css
@@ -13,6 +13,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 70px;
   /* padding: 0px 24px; */
   box-sizing: border-box;
   /* min-height: 100vh; */
@@ -159,9 +160,21 @@ html {
 
 
 
+.map-panel {
+  width: 100%;
+  height: 500px;
+  position: relative;
+  margin-top: 20px;
+}
+
 .leaflet-map {
-  height: 800px !important;
-  width: 800px !important;
+  height: 100% !important;
+  width: 100% !important;
   border-radius: 12px;
   z-index: 1;
+}
+
+.loading {
+  opacity: 0.7;
+  pointer-events: none;
 }
