--- a/src/app/pages/add-property/step-1/step1-4-2-confirm-address/step1-4-2-confirm-address.css
+++ b/src/app/pages/add-property/step-1/step1-4-2-confirm-address/step1-4-2-confirm-address.css
@@ -84,6 +84,17 @@ html {
   box-sizing: border-box;
 }
 
+.form-input[readonly] {
+  cursor: default;
+  color: #6a6a6a;
+  background-color: #f7f7f7;
+}
+
+.form-select option {
+  font-size: 16px;
+  padding: 8px;
+}
+
 .form-label {
   position: absolute;
   top: 18px;
@@ -182,15 +193,13 @@ input:checked + .slider:before {
   width: 100%;
   height: 280px;
   border-radius: 16px;
-  background-image: url("https://maps.googleapis.com/maps/api/staticmap?size=630x280&zoom=15&center=30.04442,31.23571&scale=1&key=AIzaSyC73L89dBLortoWF1LI1cgvxmpROFVd5TI&signature=c1XQQHxCXM9CHNjQjp18RgUfOh4=");
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow: hidden;
+  margin-top: 24px;
+  position: relative;
 }
 
-.map-pin {
-  width: 102px;
-  height: 102px;
+.map-container {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
