--- a/src/app/pages/add-property/step-1/step1-4-2-confirm-address/step1-4-2-confirm-address.html
+++ b/src/app/pages/add-property/step-1/step1-4-2-confirm-address/step1-4-2-confirm-address.html
@@ -10,10 +10,15 @@
     <form class="address-form" autocomplete="off">
       <div class="form-grid">
         <div class="form-field full-width">
-          <select id="country" class="form-select" required [(ngModel)]="country" (ngModelChange)="onCountryChange($event)" name="country">
-            <option value="EG">Egypt</option>
-            <!-- Add other countries as needed -->
-          </select>
+          <input
+            type="text"
+            id="country"
+            class="form-input"
+            [value]="countryName"
+            readonly
+            required
+            name="country"
+          />
           <label for="country" class="form-label">Country / region</label>
         </div>
         <div class="form-field full-width">
@@ -97,14 +102,7 @@
     </div>
 
     <div class="map-display">
-      <div class="map-pin">
-         <svg viewBox="0 0 102 102" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="51" cy="51" r="51" fill="#D92545" fill-opacity="0.16"/>
-            <circle cx="51" cy="51" r="27" fill="url(#pin-gradient)" stroke="rgba(0,0,0,0.04)"/>
-            <path d="M51 76.5C51 76.5 55.25 69.9 51 65C46.75 69.9 51 76.5 51 76.5Z" fill="url(#pin-shadow-gradient)"/>
-            <path d="M51 40.5C51 40.5 41 41.25 41 51.5C41 61.75 51 68 51 68C51 68 61 61.75 61 51.5C61 41.25 51 40.5 51 40.5Z" fill="#fff"/>
-        </svg>
-      </div>
+      <div #mapContainer id="map" class="map-container"></div>
     </div>
   </main>
 </div>
