--- a/src/app/components/chat-box/chat-box.css
+++ b/src/app/components/chat-box/chat-box.css
@@ -126,7 +126,7 @@
 .message-reaction {
   position: absolute;
   bottom: -16px;
-  right: 8px;
+  /* right: 8px; */
   background: #eee;
   border: 1px solid #e5e5e5;
   border-radius: 12px;
@@ -137,6 +137,13 @@
   justify-content: center;
   font-size: 14px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.reaction-user {
+  background-color: #f0f0f0;
+}
+.reaction-host {
+  background-color: #222;
+  color: #fff;
 }
 
 /* Emoji reaction button */
