--- a/src/app/pages/filtered-properties/filtered-properties.html
+++ b/src/app/pages/filtered-properties/filtered-properties.html
@@ -30,7 +30,7 @@
           [subtitle]="getLocationSubtitle(property)"
           [price]="property.pricePerNight"
           [rating]="property.averageRating"
-          [isFavorite]="false"
+          [isFavourite]="property.isFavourite ?? false"
           (mouseenter)="selectProperty(property)"
           (mouseleave)="selectedProperty = null"
         >
