--- a/src/app/components/mainswiper/mainswiper.html
+++ b/src/app/components/mainswiper/mainswiper.html
@@ -60,7 +60,7 @@
         [price]="property.pricePerNight"
         description="{{property.description}}"
         [rating]="property.averageRating"
-        [isFavorite]="property.isFavourite"
+        [isFavourite]="property.isFavourite ?? false"
         [reviewCount]="property.reviewCount"
       ></app-slider-card>
     </swiper-slide>
